# payment-processing

./: .env.example  .gitignore  README.md
approach-1/: Cargo.toml  README.md  docker-compose.yml
approach-1/crates/adapters/src/: gateway.rs  lib.rs  queue.rs  repository.rs
approach-1/crates/domain/src/: models.rs
approach-1/crates/observability/: Cargo.toml
approach-1/crates/observability/src/: lib.rs
approach-1/migrations/: 0001_init.sql
approach-1/scripts/: run-migrations.sh
approach-2/: Cargo.toml  README.md  build.rs
approach-2/config/: propeller.toml
approach-2/proto/push/v1/: push.proto
approach-2/src/: config.rs  error.rs  main.rs  metrics.rs
approach-2/src/auth/: mod.rs
approach-2/src/broker/: mod.rs  redis_pubsub.rs
approach-2/src/kv/: mod.rs  redis_kv.rs
approach-2/src/push/: models.rs  service.rs
approach-2/src/server/: grpc_handler.rs  mod.rs  ws_handler.rs
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: idempotency.rs  realtime.rs
