[package]
name = "propeller"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Real-time bidirectional communication platform inspired by CRED Propeller"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
config = "0.14"
dashmap = "6"
futures-util = "0.3"
base64 = "0.22"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
prost = "0.13"
prost-types = "0.13"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
